# cv-homework

1/: README.md  __main__.py  pyproject.toml
3/: homework3.ipynb
