[project]
name = "hw1"
version = "0.1.0"
description = ""
authors = [{ name = "koloboid", email = "koloboid@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless (>=4.12.0.88,<5.0.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
